--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,26 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* @layer base { // For later darkmode lightmode stuff
+  @media (prefers-color-scheme: light) {
+      :root {
+          --color-test: 255 255 255;
+      }
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  :root[data-theme="light"] {
+      --color-test: 255 255 255;
+  }
+
+  @media (prefers-color-scheme: dark) {
+      :root {
+          --color-test: 41 52 65;
+      }
+  }
+
+  :root[data-theme="dark"] {
+      --color-test: 41 52 65;
+  }
+} */
+
